# ldg-ssm-interface

./: .gitignore  LICENSE  README.md
LDG-SSM-Interface/: CMakeLists.txt  assets.qrc  icons.icns  ldg_ssm_interface.cpp  ldg_ssm_interface.h  ldg_ssm_interface.ui  main.cpp  mainwindow.cpp  mainwindow.ui
LDG-SSM-Interface/drawing/: image_renderer.cpp  image_renderer.h  overlay_painter.cpp  overlay_painter.h  renderer.cpp  renderer.h  volume_raycaster.cpp  volume_raycaster.h
LDG-SSM-Interface/drawing/model/: mesh.cpp  mesh.h  tree_draw_properties.cpp  tree_draw_properties.h  types.h  volume_draw_properties.cpp  volume_draw_properties.h  window_draw_properties.h
LDG-SSM-Interface/input/: data.h  data_buffer.cpp  data_buffer.h  input_configuration.cpp  input_configuration.h  json.cpp  json.h  visualization_configuration.cpp  visualization_configuration.h
LDG-SSM-Interface/layout/: square_grid_layout.cpp  square_grid_layout.h
LDG-SSM-Interface/shaders/: accumulate.frag  average_intensity.frag  image.frag  image.vert  isosurface.frag  max_intensity.frag  phong.frag  volume_raycasting.frag  volume_raycasting.vert
LDG-SSM-Interface/util/: atlas_container.cpp  atlas_container.h  build_tree.cpp  build_tree.h  grid_controller.cpp  grid_controller.h  image_atlas_container.cpp  image_atlas_container.h  image_atlast.h  initialize_tree.cpp  initialize_tree.h  screen_controller.cpp  screen_controller.h  tree_draw_properties.cpp  tree_draw_properties.h  tree_functions.cpp  tree_functions.h
LDG-SSM-Interface/widgets/: ldg_tree_view_button.cpp  ldg_tree_view_button.h  pannable_scroll_area.cpp  pannable_scroll_area.h  render_view.cpp  render_view.h
